--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "firebase": "^9.21.0",
     "pinia": "^2.0.32",
     "sweetalert2": "^11.7.5",
@@ -16,9 +17,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "firebase-tools": "^0.1.6",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.1.4"
   }
 }
