--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "firebase": "^9.21.0",
+    "local-storage": "^2.0.0",
     "pinia": "^2.0.32",
     "sweetalert2": "^11.7.5",
     "vue": "^3.2.47",
