--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.2",
-    "firebase": "^9.21.0",
+    "@fontsource/roboto": "^5.0.4",
+    "@vueuse/core": "^10.2.1",
+    "firebase": "^10.0.0",
     "local-storage": "^2.0.0",
-    "pinia": "^2.0.32",
-    "sweetalert2": "^11.7.5",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "pinia": "^2.1.4",
+    "sweetalert2": "^11.4.8",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
-    "firebase-tools": "^0.1.6",
-    "postcss": "^8.4.23",
+    "firebase-tools": "^12.4.3",
+    "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.1.4"
+    "vite": "^4.4.2"
   }
 }
