--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.4",
+    "@sweetalert2/theme-dark": "^5.0.15",
     "@vueuse/core": "^10.2.1",
     "firebase": "^10.0.0",
     "local-storage": "^2.0.0",
@@ -24,6 +25,8 @@
     "dotenv-webpack": "^8.0.1",
     "firebase-tools": "^12.4.3",
     "postcss": "^8.4.25",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2",
     "vite": "^4.4.2"
   }
